Optimise AbstractECorePropertySection getFilteredObjects
- Use array instead of list
- Replace loop with removeIf to filter objects by parent model